--- a/view/index.html
+++ b/view/index.html
@@ -1,94 +1,186 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8">
+    <title></title>
+  </head>
+  <style>
+    html{   
 
-		<title>mysql-gin-api</title>
+		    width: 100%;   
+		    height: 100%;   
+		    overflow: hidden;   
+		    font-style: sans-serif;   
+		}   
 
-		<style type="text/css">
+		body{   
 
-			.container {
+		    width: 100%;   
+		    height: 100%;   
+		    font-family: 'Open Sans',sans-serif;   
+		    margin: 0;   
+			background: url(https://pic1.zhimg.com/v2-47a311d313d56c479b9b028d7d67807c_r.jpg) ;
+		    background-color: rgb(31, 70, 71);   
+		}   
 
-				width: 800px;
-				margin: 0 auto;
-				margin-top: 100px;
-				padding: 30px 0;
-				border: 1px dashed #272627;
-			}
-			
-			.test {
-				width: 100%;
-				padding: 10px 0;
-				margin: 20px 0;
-				color: #4bade8;
-				font-size: 18px;
-				text-align: center;
-			}
-			
-			#jsonTable {
-				width: 500px;
-				margin: 0 auto;
-				color:#064057 ; 
-				background-color: rgba(231, 219, 227, 0.589);
-			}
-			
-			#jsonTable th,
-			
-			td {
-				padding: 6px 0;
-				line-height: 30px;
-				text-align: center;
-				font-size: larger;
-			}
+		#login{   
 
-			.bk{
+		    position: absolute;   
+		    top: 50%;   
+		    left:50%;   
+		    margin: -150px 0 0 -150px;   
+		    width: 300px;   
+		    height: 300px;   
+		}   
 
-				background-size:100% auto;
-			}
+		#login h1{  
 
-			#panel,#flip{
-					padding:5px;
-					text-align:center;
-					background-color:rgba(231, 219, 227, 0.589);
-					border:solid 1px #c3c3c3;
-}
-			#panel{
-				font-size: large;
-				padding:50px;
-				display:none;
-			}
+		    color: #00f;   
+		    text-shadow:0 0 10px;   
+		    letter-spacing: 1px;   
+		    text-align: center;   
+		}   
 
-		</style>
+		h1{   
 
-	</head>
- 
-	<body background="http://img.tukuppt.com/beijing_preview/00/00/01/5a6ac701689d9.jpg-0.jpg!/fw/780/quality/90/unsharp/true/compress/true"  id="bk">
+		    font-size: 2em;   
+		    margin: 0.67em 0;   
+		}   
 
-		<div id="flip">项目简介</div>
-		<div id="panel">mysql-gin-api by nj-jay</div>
-		
-			<div class="test"></div>
-			<table border="1" cellspacing="0" bordercolor="#4bade8" cellpadding="0" id="jsonTable">
-				<tr>
-					<th >id</th>
-					<th>name</th>
-					<th>price</th>
-				</tr>
-			</table>
- 
-		<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+		input{   
 
-		<script type="text/javascript" src="js/ajax.js">
+		    width: 278px;   
+		    height: 18px;   
+		    margin-bottom: 10px;   
+		    outline: none;   
+		    padding: 10px;   
+		    font-size: 13px;   
+		    color: #fff;   
+		    text-shadow:1px 1px 1px;   
+		    border-top: 1px solid #312E3D;   
+		    border-left: 1px solid #312E3D;   
+		    border-right: 1px solid #312E3D;   
+		    border-bottom: 1px solid #56536A;   
+		    border-radius: 4px;   
+		    background-color: #2D2D3F;  
 
-				$.getDate()			
-		</script>
+		}   
+		.but{   
 
-<script> 
-	$(document).ready(function(){
-	  $("#flip").click(function(){
-		$("#panel").slideToggle("slow");
-	  });
-	});
-	</script>
-	</body>
+		    width: 300px;   
+		    min-height: 20px;   
+		    text-align: center;
+		    background-color: #4a77d4;   
+		    border: 1px solid #3762bc;   
+		    color: #00f;   
+		    padding: 9px 14px;   
+		    font-size: 15px;   
+		    line-height: normal;   
+		    border-radius: 5px;   
+		    margin: 0;   
+		} 
+		.nj {
+
+				position: fixed;
+                width: 200px;
+                height: 150px;
+               
+                top:50%;
+                left: 50%;
+                margin-top: -100px;
+                margin-left:-150px ;
+
+		}
+
+  </style>
+
+<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+
+<script type="text/javascript">
+    	
+    	function check_name() {
+
+	      console.log(1);
+	      var code = document.getElementById("name").value;//这是获取账号登陆的ID
+	      var span = document.getElementById("nameReg");
+	      var reg = /^([a-zA-Z0-9][a-zA-Z]{1}|[._]){4,19}$/;
+	      if(reg.test(code)) {
+	        span.innerText = "验证通过";
+	        span.style.color = "blue";
+
+	      } else {
+
+	        span.innerText = "验证不通过";
+	        span.style.color = "red";
+
+	      }
+
+	   }
+    function check_pwd(){
+
+       console.log(2);
+       var code2 = document.getElementById("pwd").value;
+       var span2 = document.getElementById("pwdReg");
+       var reg2 = /^(\w){6,20}$/;
+
+       if(reg2.test(code2)) {
+	        span2.innerText = "验证通过";
+	        span2.style.color = "green";
+	      } else {
+	        span2.innerText = "验证不通过";
+	        span2.style.color = "red";
+       } 
+
+    }	
+    $(function(){
+
+    	$(":button").on("click",function(){
+    		$.ajax({
+
+    			url:"http://nj-jay.com:8080/api/v1/login",
+
+    			type:"post",
+
+    			data:{
+
+    				username:$("#name").val(),
+
+    				password:$("#pwd").val()
+    			},
+
+    			dataType:"json",
+
+    			success:function(data){
+
+    				if(data == "success"){
+						
+    					window.location.href = "view.html";
+
+    				}else if (data == "error"){
+
+    					alert("用户名或密码输入错误，请重新输入!");
+
+    				}
+    			}
+    		});
+    	});
+    });
+    </script> 
+
+  <body >
+
+	<h1 style="text-align: center;">Mysql-Gin-RestfulApi</h1>
+	<h2 style="text-align: center;">By nj-jay</h2>
+	<div class="nj">
+	
+	<form method="post"  >  
+	  <input type="text" required="required" placeholder="用户名" name="name" id="name" οnblur="check_name() ></input><span id="nameReg"></span>  
+	  <br/>
+	  <input type="password" required="required" placeholder="密码" name="pwd" id="pwd" οnblur="check_pwd()"></input><span id="pwdReg"></span>
+	  <br/> 
+	  <button class="but" type="submit">登录</button> 
+  </form>  
+
+  </div>
+  </body>
 </html>
