--- a/view/index.html
+++ b/view/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>mysql-gin-api</title>
+    <link rel="shortcut icon" href="http://picture.nj-jay.com/favicon.ico">
   </head>
   <style>
     html{   
@@ -66,7 +67,6 @@
 
 		}   
 		.but{   
-
 		    width: 300px;   
 		    min-height: 20px;   
 		    text-align: center;
@@ -80,7 +80,6 @@
 		    margin: 0;   
 		} 
 		.nj {
-
 				position: fixed;
                 width: 200px;
                 height: 150px;
@@ -89,88 +88,52 @@
                 left: 50%;
                 margin-top: -100px;
                 margin-left:-150px ;
-
 		}
 
   </style>
-
 <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-
-<script type="text/javascript">
-    	
-    	function check_name() {
-		console.log(1);
-	        var code = document.getElementById("name").value;//这是获取账号登陆的ID
-	        var span = document.getElementById("nameReg");
-	        var reg = /^([a-zA-Z0-9][a-zA-Z]{1}|[._]){4,19}$/;
-	        if(reg.test(code)) {
-	        	span.innerText = "验证通过";
-	        	span.style.color = "blue";
-
-	        } else {
-
-	        	span.innerText = "验证不通过";
-	        	span.style.color = "red";
-
-	      	       }
-
-	      	}
-    	function check_pwd(){
-
-       		console.log(2);
-       		var code2 = document.getElementById("pwd").value;
-       		var span2 = document.getElementById("pwdReg");
-       		var reg2 = /^(\w){6,20}$/;
-
-       		if(reg2.test(code2)) {
-	        	span2.innerText = "验证通过";
-	        	span2.style.color = "green";
-	      	} else {
-	        		span2.innerText = "验证不通过";
-	        		span2.style.color = "red";
-       			} 
-
-    }	
-    	$(function(){
-
-		$("#bttwo").click(function(){
+<script>
 			
-			window.location.href = "register.html";
+				$(document).ready(function(){
 
-		});	
-    		$("#bt").on("click",function(){
-    		$.ajax({
+								$("#bttwo").on("click",function(){
 
-    			url:"http://nj-jay.com:8080/api/v1/login",
+									window.location.href = "register.html";
+								});
 
-    			type:"post",
+								$("#bt").on("click", function(){
 
-    			data:{
+									$.ajax({
 
-    				username:$("#name").val(),
+													type:'POST',
 
-    				password:$("#pwd").val()
-    			},
+													url:"http://nj-jay.com:8080/api/v2/trueLogin",
 
-    			dataType:"json",
+													data:{
 
-    			success:function(data){
+																			username:$("#name").val(),
+																			password:$("#pwd").val(),
 
-    				if(data == "success"){
-						
-    					window.location.href = "view.html";
+																},
 
-    				}else if (data == "error"){
+													dataType:'json',
 
-    					alert("用户名或密码输入错误，请重新输入!");
+													success:function(data){
+			      if(data=="success"){
+					alert("登录成功");
+					window.location.href="view.html";
+				} else {
+					alert("登录失败");
 
-    				}
-    			}
-    		});
-    	});
-    });
-	
-    </script> 
+				}
+
+													},
+
+			});
+});
+								
+});    
+</script> 
 
   <body >
 
@@ -178,14 +141,13 @@
 	<h2 style="text-align: center;">By nj-jay</h2>
 	<div class="nj">
 	
-	<form method="post"  >  
-	  <input type="text" required="required" placeholder="用户名" name="name" id="name" οnblur="check_name() ></input><span id="nameReg"></span>  
+	<form method="post">  
+	  <input type="text" required="required" placeholder="用户名" name="name" id="name"></input>
 	  <br/>
-	  <input type="password" required="required" placeholder="密码" name="pwd" id="pwd" οnblur="check_pwd()"></input><span id="pwdReg"></span>
+	  <input type="password" required="required" placeholder="密码" name="pwd" id="pwd"></input>
 	  <br/> 
 	  <button class="but" type="submit" id="bt">登录</button> 
   </form>  
-
 	<br/>
 	<button class="but" id="bttwo">注册</button>
   </div>
