--- a/view/view.html
+++ b/view/view.html
@@ -143,7 +143,7 @@ function getDate() {
 		
 		$.ajax({
 				type: "get",
-				url: "http://nj-jay.com:8080/api/v2/books/1",
+				url: "http://localhost:8080/api/v2/books/1",
 				dataType: "json",
 				success: function(res) {
 						var list = res
